--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -6,3 +6,5 @@ jobs:
     steps:
       - name: my-step
         run: echo "hello world"
+      - name: Install dependencies
+        run: python -m pip install --upgrade pip
