--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -8,3 +8,5 @@ jobs:
         run: echo "hello world"
       - name: Install dependencies
         run: python -m pip install --upgrade pip
+      - name: Checkout code
+        uses: actions/checkout@v2
